--- a/pom.xml
+++ b/pom.xml
@@ -1626,6 +1626,12 @@
           <artifactId>maven-refresh-webscripts-plugin</artifactId>
           <version>1.0.0-SNAPSHOT</version>
         </plugin>
+
+        <plugin>
+          <groupId>fr.opensourceecm.maven</groupId>
+          <artifactId>dependenciesGenerator-maven-plugin</artifactId>
+          <version>0.2.1-beta-SNAPSHOT</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
