When the resources are deployed, they are now overwritten even if the target is newer.

--- a/pom.xml
+++ b/pom.xml
@@ -1599,6 +1599,10 @@
               </configuration>
             </execution>
           </executions>
+
+          <configuration>
+            <overwrite>true</overwrite>
+          </configuration>
         </plugin>
 
         <plugin>
