--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.redpill-linpro.alfresco</groupId>
   <artifactId>alfresco-base</artifactId>
-  <version>3.3.5-enterprise</version>
+  <version>3.3.5.1-enterprise</version>
   <packaging>pom</packaging>
   <name>Redpill Linpro Alfresco Base Super POM</name>
   <description>The Super POM for all RLP based Alfresco projects  </description>
@@ -1556,6 +1556,13 @@
                       <exclude>META-INF/**</exclude>
                     </excludes>
                   </resource>
+                  <resource>
+                    <directory>${project.build.directory}/${project.build.finalName}/web</directory>
+                    <includes>
+                      <include>**/*-min.js</include>
+                      <include>**/*-min.css</include>
+                    </includes>
+                  </resource>
                 </resources>
               </configuration>
             </execution>
@@ -1617,7 +1624,7 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>yuicompressor-maven-plugin</artifactId>
-          <version>0.9</version>
+          <version>1.1</version>
           <executions>
             <execution>
               <id>minimize-javascript</id>
@@ -1639,6 +1646,9 @@
                   <include>**/*.css</include>
                 </includes>
                 <webappDirectory>${project.build.directory}/${project.build.finalName}/web</webappDirectory>
+                <force>true</force>
+                <statistics>false</statistics>
+                <jswarn>false</jswarn>
               </configuration>
             </execution>
           </executions>
