--- a/pom.xml
+++ b/pom.xml
@@ -1676,6 +1676,7 @@
         <plugin>
           <groupId>org.zeroturnaround</groupId>
           <artifactId>jrebel-maven-plugin</artifactId>
+          <version>1.0.7</version>
           <configuration>
             <packaging>war</packaging>
             <alwaysGenerate>true</alwaysGenerate>
